<resources>
    <string name="app_name">Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_current_tasks">Current tasks</string>
    <string name="menu_birthdays">Birthdays</string>
    <string name="menu_done_tasks">Done tasks</string>

    <string name="home_second">Home Second</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Enter text</string>

    <string name="task_title">Title</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="dialog_title">Add task</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_error_title_empty">Please, enter title task.</string>
    <string name="dialog_removing_mess">Deleted task?</string>
    <string name="removed">Removed</string>
    <string name="separator_overdue">Overdue</string>
    <string name="separator_today">Today</string>
    <string name="separator_tomorrow">Tomorrow</string>
    <string name="separator_future">Future</string>
    <string name="edit_dialog_title">Edit task</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_birthdays_active">You have no birthdays!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="no_tasks_add">Add a task item +</string>
    <string name="add_task">New task</string>
    <string name="edit_task">Edit task</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="design_header">Design</string>
    <string name="font_title">Font</string>
    <string name="time_format_title">24 hour time</string>
    <string name="lang_title">Language</string>
    <string name="LangSummary">Application language. \nYou must restart to accept the changes.</string>
    <string name="edit_birthday">Edit birthday</string>
    <string name="add_birthday">Add birthday</string>
    <string name="task_comment">Comment</string>
    <string name="no_birthdays_add">Add a new birthday</string>
    <string name="dialog_removing_mess_birthday">Delete birthday?</string>
    <string name="empty_task_message">Enter task title</string>
    <string name="empty_birthday_message">Enter birthday title</string>
    <string name="action_send">Send feedback</string>
    <string name="task_repeat">Repeat</string>
    <string name="task_completed">Completed</string>
    <string name="admin_email" translatable="false">mihailov.alex.dev@gmail.com</string>
    <string name="feedback_title">Reminder-feedback</string>
    <string name="feedback_device_info">"My device info: "</string>
    <string name="feedback_app_version">"App version: "</string>
    <string name="feedback">Feedback</string>
    <string name="action_rate">Rate app</string>
    <string name="notify_header">Notification</string>
    <string name="notify_time_delete_title">"Number of days to keep completed tasks"</string>
    <string name="notify_time_delete_query">Nmber of days</string>
    <string name="confirm_app_termination">Confirm app termination</string>
    <string name="confirm_app_termination_title">"Sign out of the app?"</string>
    <string name="confirm_app_termination_message">Do you really want to leave?</string>
    <string name="birthday_at">Birthday at</string>
</resources>
