<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

   <PreferenceCategory app:title="@string/design_header">
        <ListPreference
            app:defaultValue="middle"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:key="font"
            app:title="@string/font_title"
            app:useSimpleSummaryProvider="true" />
       <ListPreference
           app:defaultValue="default"
           app:entries="@array/lang_entries"
           app:entryValues="@array/lang_values"
           app:key="language"
           app:title="@string/lang_title"
           app:summary="@string/LangSummary"
           app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="time_format"
            app:title="@string/time_format_title" />


    </PreferenceCategory>

</PreferenceScreen>
