<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_tasks"
            android:icon="@drawable/ic_menu_current_tasks"
            android:title="@string/menu_current_tasks" />
        <item
            android:id="@+id/nav_birthdays"
            android:icon="@drawable/ic_menu_birthdays"
            android:title="@string/menu_birthdays" />
        <item
            android:id="@+id/nav_done_tasks"
            android:icon="@drawable/ic_menu_done_tasks"
            android:title="@string/menu_done_tasks" />
    </group>
    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_send_feedback"
                android:icon="@drawable/ic_send"
                android:title="@string/action_send"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/action_rate"/>
            <item
                android:id="@+id/nav_pref"
                android:icon="@drawable/ic_pref"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>
