<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <import type="android.view.View.OnClickListener" />
        <import type="com.mihailovalex.reminder_room.utils.DateUtils" />

        <variable
            name="viewmodel"
            type="com.mihailovalex.reminder_room.ui.addedittask.AddEditTaskViewModel"/>
    </data>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <CheckBox
                    android:id="@+id/cbCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_completed"
                    android:checked="@{viewmodel.mTaskCompleted}"
                    android:onCheckedChanged="@{(v, checked)->viewmodel.setmTaskCompleted(checked)}"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbCompleted"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_title">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textMultiLine"
                        android:text="@={viewmodel.title}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogTaskDate"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogTaskTitle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_date">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@{viewmodel.date}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogTaskTime"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogTaskTitle"
                    android:layout_alignRight="@id/tilDialogTaskTitle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_time">

                    <EditText
                        android:id="@+id/etTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@{viewmodel.time}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spDialogTaskPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogTaskDate"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:selectedItemPosition = "@{viewmodel.priority}"
                    android:layout_marginRight="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogTaskRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spDialogTaskPriority"

                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_repeat">

                    <EditText
                        android:id="@+id/etReeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@{viewmodel.repeat}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </ScrollView>
</layout>
