<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>
        <import type="android.view.View.OnClickListener" />
        <import type="com.mihailovalex.reminder_room.utils.DateUtils" />

        <variable
            name="viewmodel"
            type="com.mihailovalex.reminder_room.ui.addeditbirthday.AddEditBirthdayViewModel"/>
    </data>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogBirthdayTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_title">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewmodel.title}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogBirthdayComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogBirthdayTitle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_comment">

                    <EditText
                        android:id="@+id/etComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.comment}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogBirthdayDate"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogBirthdayComment"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_date">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@{viewmodel.date}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDialogBirthdayTime"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilDialogBirthdayComment"
                    android:layout_alignRight="@id/tilDialogBirthdayComment"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/task_time">

                    <EditText
                        android:id="@+id/etTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:text="@{viewmodel.time}">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </ScrollView>
</layout>
